# early-stage-github-signals

./: .env.example  .gitignore  .pre-commit-config.yaml  COMMIT_GUIDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  WEEKLY_GEMS_README.md  config.yaml  deployment.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.sh  run_pipeline.sh  run_weekly_gems.sh  test_run.sh  weekly_gems_cli.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: dashboard-feature.md
.github/workflows/: cleanup-branches.yml  gitignore-lint.yml  pages.yml  stale.yml  test-and-validate.yml  test.yml  update-metrics.yml  validate-schema.yml  weekly-pipeline.yml  weekly-report.yml
docs/: CODEBASE_STATUS.md  DASHBOARD_IMPLEMENTATION.md  DEVELOPER_SETUP.md  FOLDER_STRUCTURE.md  SCORING.md  TOKEN_SETUP_GUIDE.md  about.html  about.md  dashboard-new.js  dashboard.js  history.js  index.html  prompts.md  roadmap.md  styles.css
docs/api/: 2025-06-06.json  2025-06-10.json  2025-06-11.json  2025-06-13.json  2025-06-21.json  2025-07-15.json  README.md  latest.json  simplified.json
docs/assets/: README.md
docs/data/: 2025-06-06.json  2025-06-07.json  2025-06-10.json  (+6 more)
reports/: weekly_gems_2025-06-06.json  weekly_gems_2025-06-07.json  weekly_gems_2025-06-07.md  weekly_gems_2025-06-10.json  weekly_gems_2025-06-10.md  weekly_gems_2025-06-11.json  weekly_gems_2025-06-11.md  weekly_gems_2025-06-13.json  weekly_gems_2025-06-13.md  weekly_gems_2025-06-19.json  weekly_gems_2025-06-19.md  weekly_gems_2025-06-20.json  weekly_gems_2025-06-20.md  weekly_gems_2025-06-21.json  weekly_gems_2025-06-21.md  weekly_gems_2025-07-10.json  weekly_gems_2025-07-10.md  weekly_gems_2025-07-15.json  weekly_gems_2025-07-15.md  weekly_gems_latest.md
schemas/: api.schema.json  repo.schema.json  repository.schema.json  simplified.schema.json  weekly_gems.schema.json
scripts/: backfill_data_files.py  commit_dashboard.sh  test_github_token.py  validate_data_quality.py  validate_schema.py
src/: __init__.py  main.py
tests/: __init__.py  test_integration.py  test_json_delta.py  test_json_generator.py  test_metrics.py
(+33 files in other folders)
