[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "early-stage-github-signals"
description = "A platform for identifying promising early-stage developer tools and libraries on GitHub"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cdolik", email = ""},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

dependencies = [
    "PyGithub>=1.59.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0",
    "click>=8.1.3",
    "python-dateutil>=2.8.2",
    "jsonschema>=4.22.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests-cache>=1.1.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "soupsieve>=2.4.0",
    "responses>=0.23.0",
    "mypy>=1.4.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12.9",
    "matplotlib>=3.6.0",
    "flask>=2.2.2",
    "gunicorn>=20.1.0",
    "tqdm>=4.64.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "black>=23.3.0",
    "pre-commit>=3.3.1",
]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
^/data/.*
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/build",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    "data/",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "data/",
    "docs/",
]